--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,16 +9,24 @@ environment:
   sdk: ">=2.19.0 <3.0.0"
 
 dependencies:
+  cupertino_icons: ^1.0.2
+  email_validator: ^2.1.17
+  firebase_auth: ^4.2.5
+  firebase_core: ^2.4.1
   flutter:
     sdk: flutter
-
-  cupertino_icons: ^1.0.2
+  get: ^4.6.5
+  google_fonts: ^4.0.1
+  hexcolor: ^3.0.1
+  intl_phone_number_input: ^0.7.2
 
 dev_dependencies:
+  flutter_lints: ^2.0.0
   flutter_test:
     sdk: flutter
 
-  flutter_lints: ^2.0.0
-
 flutter:
   uses-material-design: true
+
+  assets:
+    - assets/Images/
